# wise-knowledge-mcp-skill

./: CLAUDE.md  README.md
docker/: compose.yaml
mcp_client/: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
mcp_server/: .env.example  README.md  main.py  pyproject.toml  pytest.ini  search.py
mcp_server/tests/: __init__.py  conftest.py  test_search.py
skills/wise-knowledge-search/: .skillmanifest  CHANGELOG.md  EXAMPLES.md  FAQ.md  LICENSE  QUICKSTART.md  README.md  SKILL.md  claude-code-mcp-config.example.json  install.sh
transcripts/: 1 SPOSÓB, żeby klienci zgłaszali się do Ciebie sami! _ Seria ekspercka 2_3.md  5 fundamentów POZYSKIWANIA KLIENTÓW! _ Seria ekspercka 1_3.md  6 zasad skutecznego PROSPECTINGU! _Pozyskiwanie klientów mailowo. _ Seria ekspercka 3_3.md  Czego NIE MOŻE zawierać firmowa strona internetowa_.md  Jak WYRÓŻNIĆ SIĘ na tle konkurencji_ 20 obszarów.md  Jak zbudować STRATEGIĘ BIZNESU w 35 minut_ (Moja metoda).md  budowanie_strony_internetowej_b2b.json  fundamenty_pozyskiwania_klientow.json  sposob_aby_klienci_zglaszali_sie_sami.json  strategia_biznesu.json  wyroznienie_na_tle_konkurencji.json  zasady_skutecznego_prospectingu.json
wise_knowledge/: .env.example  explore_database.ipynb  ingest_transcripts.py  main.py  pyproject.toml  pytest.ini
wise_knowledge/tests/: __init__.py  conftest.py  test_ingest_transcripts.py
